# FaceWinUnlock-Tauri

./: .gitignore  README.md
Server/: .gitignore  Cargo.toml
Server/src/: CPipeListener.rs  CSampleProvider.rs  lib.rs
UI/: .gitignore  README.md  index.html  package-lock.json  package.json
UI/src/: App.vue
UI/src-tauri/: .gitignore  Cargo.toml  tauri.conf-包含WebView.json  tauri.conf-所有用户.json  tauri.conf.json
UI/src-tauri/capabilities/: default.json
UI/src-tauri/src/: lib.rs  liveness.rs  main.rs  proc.rs  tray.rs
UI/src-tauri/src/modules/: faces.rs  init.rs  mod.rs  options.rs
UI/src-tauri/src/utils/: api.rs  custom_result.rs
UI/src/hook/: useFile.js  useUnlockLog.js
UI/src/layout/: MainLayout.vue
UI/src/router/: index.js
UI/src/stores/: auth.js  faces.js  options.js
UI/src/utils/: sqlite.js
UI/src/views/: Dashboard.vue  Init.vue  Login.vue  Logs.vue  Options.vue
UI/src/views/Faces/: Add.vue  List.vue
