[package]
name = "winlogon"
version = "0.2.2"
edition = "2024"

[lib]
name = "winlogon"
crate-type = ["cdylib"]

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=/DEF:exports.def"]

[dependencies]
log = "0.4.29"
simplelog = "0.12.2"
windows-core = "0.62.2"
image = "0.25"
anyhow = "1.0"
tract-onnx = "0.21"
lazy_static = "1.4"
base64 = "0.22"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_Memory",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_Controls_RichEdit",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Credentials",
]

