[package]
name = "facewinunlock-tauri"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "facewinunlock_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true # 启用链接时优化。
opt-level = "s" # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort" # 通过禁用 panic 处理程序来提高性能。
strip = true # 确保移除调试符号。

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3.3"
opencv = "0.98.0"
winreg = "0.55.0"
tauri-plugin-dialog = "2"
base64 = "0.22.1"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
r2d2_sqlite = "0.24.0"
r2d2 = "0.8"
lazy_static = "1.5.0"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Media_DirectShow",
    "Win32_Media_MediaFoundation",
    "Win32_System_IO",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Pipes",
    "Win32_System_Variant",
    "Win32_System_Shutdown",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_RemoteDesktop",
    "Win32_System_WindowsProgramming",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
